fix map not center on firefox

--- a/src/components/Home/Map.css
+++ b/src/components/Home/Map.css
@@ -1,5 +1,6 @@
 .Map {
   display: flex;
+  justify-content: center;
   border-radius: 1rem;
   animation: fade 0.5s ease-out;
   height: 600px;
